--- a/app/src/main/res/layout/fragment_registration_account_user.xml
+++ b/app/src/main/res/layout/fragment_registration_account_user.xml
@@ -124,13 +124,13 @@
         <Button
             android:id="@+id/btNextInRegPersonalInfoUser"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="60dp"
             android:layout_marginStart="40dp"
             android:layout_marginTop="25dp"
             android:layout_marginEnd="40dp"
             android:backgroundTint="#17F1D7"
             android:fontFamily="sans-serif-medium"
-            android:text="@string/button_info_next"
+            android:text="Продолжить"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:layout_marginBottom="12dp"
