--- a/app/src/main/res/layout/fragment_registration_competencies_user.xml
+++ b/app/src/main/res/layout/fragment_registration_competencies_user.xml
@@ -251,7 +251,7 @@
         <Button
             android:id="@+id/btNextBeforeTest"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginStart="40dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="40dp"
