--- a/app/src/main/res/layout/fragment_registration_personal_info_user.xml
+++ b/app/src/main/res/layout/fragment_registration_personal_info_user.xml
@@ -286,7 +286,7 @@
         <Button
             android:id="@+id/btNextInRegPersonalInfoUser"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginStart="40dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="40dp"
@@ -294,7 +294,7 @@
             android:backgroundTint="#17F1D7"
             android:fontFamily="sans-serif-medium"
             android:gravity="center"
-            android:text="@string/button_info_next"
+            android:text="Продолжить"
             android:textColor="@color/white"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
