--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,8 +2,12 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/aclonica</item>
+        <item>@font/acme</item>
+        <item>@font/actor</item>
         <item>@font/alata</item>
         <item>@font/allerta</item>
+        <item>@font/andika</item>
+        <item>@font/arimo</item>
         <item>@font/open_sans_light</item>
         <item>@font/roboto_light</item>
         <item>@font/varela</item>
